// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ThemeProvider /> should render with a default theme 1`] = `
<ThemeProvider
  setTheme={[Function]}
  theme="primary"
/>
`;

exports[`<ThemeProvider /> should render with a theme prop 1`] = `
<ThemeProvider
  setTheme={[Function]}
  theme="secondary"
/>
`;
